; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/netlogic/common/extr_smp.c_nlm_boot_secondary.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/netlogic/common/extr_smp.c_nlm_boot_secondary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.TYPE_2__ = type { i32 }

@nlm_next_sp = common dso_local global i64 0, align 8
@nlm_next_gp = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nlm_boot_secondary(i32 %0, %struct.task_struct* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.task_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.task_struct* %1, %struct.task_struct** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @cpu_logical_map(i32 %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @nlm_hwtid_to_node(i32 %9)
  %11 = call %struct.TYPE_2__* @nlm_get_node(i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %5, align 4
  %14 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %15 = call i64 @__KSTK_TOS(%struct.task_struct* %14)
  store i64 %15, i64* @nlm_next_sp, align 8
  %16 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %17 = call i64 @task_thread_info(%struct.task_struct* %16)
  store i64 %17, i64* @nlm_next_gp, align 8
  %18 = call i32 (...) @__sync()
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @nlm_pic_send_ipi(i32 %19, i32 %20, i32 1, i32 1)
  ret i32 0
}

declare dso_local i32 @cpu_logical_map(i32) #1

declare dso_local %struct.TYPE_2__* @nlm_get_node(i32) #1

declare dso_local i32 @nlm_hwtid_to_node(i32) #1

declare dso_local i64 @__KSTK_TOS(%struct.task_struct*) #1

declare dso_local i64 @task_thread_info(%struct.task_struct*) #1

declare dso_local i32 @__sync(...) #1

declare dso_local i32 @nlm_pic_send_ipi(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
